# ai-assistants

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bots/autoelectric/: .env.example  __init__.py  constants.py  db.py  handlers.py  main.py  system_prompt.md  x431_parser.py
core/: __init__.py  claude_client.py  config.py  telegram_bot.py  vision.py  whisper_client.py
core/utils/: __init__.py  logging.py  retry.py
migrations/: 001_initial.sql
