[project]
name = "ai-assistants"
version = "0.1.0"
description = "Парк специализированных Telegram-ботов на общем ядре"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0,<4.0",
    "anthropic>=0.30,<1.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "faster-whisper>=1.0,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "bots*"]
